[BattOr] Add flushing before requesting firmware git hash.

BUG=677303

Review-Url: https://codereview.chromium.org/2612333003
Cr-Commit-Position: refs/heads/master@{#441817}

Former-commit-id: 4a24995c28476982924693f7ea299d30e0103379